fix(geosearch): fix double scroll bar

--- a/src/content/styles/modules/_geosearch.scss
+++ b/src/content/styles/modules/_geosearch.scss
@@ -87,6 +87,7 @@ $result-item-height-touch: rem(4.8);
 
             display: flex;
             flex-direction: column;
+            overflow: hidden;
 
             width: 100%;
 
